[gd_scene format=3 uid="uid://bdn0veeu6hnaa"]

[ext_resource type="Script" uid="uid://dfxx034f8q22l" path="res://title_screen.gd" id="1_v6p8y"]

[node name="TitleScreen" type="Control" unique_id=961368059]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v6p8y")

[node name="Title" type="Label" parent="." unique_id=347968920]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -98.260864
offset_right = 101.739136
offset_bottom = 135.0
grow_horizontal = 2
text = "Umamusume 2"
horizontal_alignment = 1
vertical_alignment = 2

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=1251207279]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -138.0
offset_top = -97.0
offset_right = 138.0
offset_bottom = 98.0
grow_horizontal = 2
grow_vertical = 2

[node name="Play Button" type="Button" parent="VBoxContainer" unique_id=2095710754]
layout_mode = 2
text = "PLAY"

[node name="Credits Button" type="Button" parent="VBoxContainer" unique_id=1974927017]
layout_mode = 2
text = "CREDITS"

[node name="Quit Button" type="Button" parent="VBoxContainer" unique_id=848350482]
layout_mode = 2
text = "QUIT"

[connection signal="pressed" from="VBoxContainer/Play Button" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Credits Button" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit Button" to="." method="_on_quit_button_pressed"]
